--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -1,54 +1,64 @@
 {% extends "base.html" %}
 {% load generic_flatblocks %}
 {% block content %}
-    {% for project in project_list|slice:":1" %}
-        <article class="project box">
-            {% for image in project.projectimage_set.all %}
-                {% if image.is_main %}
-                    <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
-                {% endif %}
-            {%  endfor %}
+    <div class="tertiary">
+        {% for project in project_list|slice:":2" %}
+            <article class="project" id="{{ project.slug }}">
+                {% for image in project.projectimage_set.all %}
+                    {% if image.is_main %}
+                        <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
+                    {% endif %}
+                {%  endfor %}
+            </article>
+        {% endfor %}
+    </div>
+    <div class="main">
+        <section class="text">
+            <article id="profile">
+            {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
+            <p><a href="#">Read More</a></p>
+            </article>
+        </section>
+        <section class="projects">
+            {% for project in project_list|slice:"2:4" %}
+                <article class="project" id="{{ project.slug }}">
+                    {% for image in project.projectimage_set.all %}
+                        {% if image.is_main %}
+                            <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
+                        {% endif %}
+                    {%  endfor %}
+                </article>
+            {% endfor %}
+        </section>
+        <section class="projects featured">
+            {% for project in project_list|slice:"4:5" %}
+                <article class="project" id="{{ project.slug }}">
+                    {% for image in project.projectimage_set.all %}
+                        {% if image.is_main %}
+                            <a href="{{ project.get_absolute_url }}"><img src="{{ image.featured.url }}" /></a>
+                        {% endif %}
+                    {%  endfor %}
+                </article>
+            {% endfor %}
+        </section>
+    </div>
+    <div class="secondary">
+        {% for project in project_list|slice:"5:" %}
+            <article class="project" id="{{ project.slug }}">
+                {% for image in project.projectimage_set.all %}
+                    {% if image.is_main %}
+                        <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
+                    {% endif %}
+                {%  endfor %}
+            </article>
+        {% endfor %}
+         <article id="news" class="text box">
+            <p><a href="#">Read More</a></p>
         </article>
-    {% endfor %}
-    <article id="profile" class="text box">
-    {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
-    <p><a href="#">Read More</a></p>
-    </article>
-    {% for project in project_list|slice:"1:7" %}
-        <article class="project box">
-            {% for image in project.projectimage_set.all %}
-                {% if image.is_main %}
-                    <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
-                {% endif %}
-            {%  endfor %}
-        </article>
-    {% endfor %}
-    {% for project in project_list|slice:"7:8" %}
-        <article class="project box featured">
-            {% for image in project.projectimage_set.all %}
-                {% if image.is_main %}
-                    <a href="{{ project.get_absolute_url }}"><img src="{{ image.featured.url }}" /></a>
-                {% endif %}
-            {%  endfor %}
-        </article>
-    {% endfor %}
-
-    {% for project in project_list|slice:"8:" %}
-        <article class="project box">
-            {% for image in project.projectimage_set.all %}
-                {% if image.is_main %}
-                    <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
-                {% endif %}
-            {%  endfor %}
-        </article>
-    {% endfor %}
-     <article id="news" class="text box">
-        <p><a href="#">Read More</a></p>
-    </article>
+    </div>
 
 {% endblock content %}
 {% block js_local %}
-    <script src="{{ STATIC_URL }}js/jquery.masonry.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             var height = $(".project").height();
@@ -59,20 +69,5 @@
             var height = $(".project").height();
             $(".text").css('height', height);
         });
-    </script>
-    <script>
-        var $container = $('.content');
-
-        $(window).resize(function(){
-             $container.imagesLoaded( function(){
-                $container.masonry({
-                    itemSelector: '.box',
-                    isResizable: false,
-                    // set columnWidth a fraction of the container width
-                    columnWidth: $container.width() / 6
-                });
-             });
-    // trigger resize to set up masonry on start-up
-        }).resize();
     </script>
 {% endblock js_local %}
