--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -125,9 +125,8 @@ div.main article.featured {
     width:31.67%
 }
 
-article.text {
+section.text {
     width:100%;
-    margin:0 0.833%;
 }
 
 article#profile {
