--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -124,6 +124,14 @@ section.text {
     width:100%;
 }
 
+article#profile {
+    background:#7eac32;
+}
+
+article#news {
+    background:#d27193;
+}
+
 
 
 
