--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -105,7 +105,7 @@ div.secondary {
      width:33.3%;
 }
 
-div.secondary article.project {
+div.secondary section.projects article {
     float:left;
     width:45%;
     margin:0 2.5%;
