--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -55,7 +55,7 @@
         {% endfor %}
         </section>
         <section class="text">
-            <article id="news" class="text box">
+            <article id="news">
                 <p><a href="#">Read More</a></p>
             </article>
         </section>
