edited homepage html and css

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -136,6 +136,7 @@ div.main section.featured {
 div.main section.text {
     width:95%;
     margin: 0 2.5%;
+    overflow: hidden;
 }
 
 section#profile {
