--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -134,9 +134,13 @@ div.main section.featured {
 }
 
 div.main section.text {
+    width:96.66%;
+    margin: 0 1.67%;
+}
+
+div.secondary section.text {
     width:95%;
     margin: 0 2.5%;
-    overflow: hidden;
 }
 
 section#profile {
