--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -99,11 +99,13 @@ body {
 div.main {
     float:left;
     width:50%;
+    background: blue;
 }
 
 div.secondary {
      float:left;
      width:33.3%;
+    background: yellow;
 }
 
 div.secondary section.projects article.project {
@@ -115,6 +117,7 @@ div.secondary section.projects article.project {
 div.tertiary {
      float:left;
      width:16.67%;
+     background: red;
 }
 
 article.project img {
