--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -67,7 +67,7 @@
 {% endblock content %}
 {% block js_local %}
     <script type="text/javascript">
-        $(document).ready(function() {
+        /*$(document).ready(function() {
             var height = $(".tertiary > article").height();
             $(".text").css('height', height);
         });
@@ -75,6 +75,6 @@
         $(window).resize(function() {
             var height = $(".tertiary > article").height();
             $(".text").css('height', height);
-        });
+        });*/
     </script>
 {% endblock js_local %}
