edited homepage js

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -70,6 +70,7 @@
         $(document).ready(function() {
             var height = $("img:first").height();
             $(".text").css('height', height);
+            alert(height);
         });
 
         $(window).resize(function() {
