edited homepage js

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -70,6 +70,10 @@
         $(document).ready(function() {
             var height = $(".project").width();
             $(".text").css('height', height);
+            var total_width = $(".content").width();
+            var margin = total_width * 0.0083;
+            $("article").css('margin-top', margin);
+            $("article").css('margin-bottom', margin);
         });
 
         $(window).resize(function() {
