--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -69,7 +69,7 @@
     <script type="text/javascript">
         $(document).ready(function() {
             var height = $(".project").width();
-            $(".text").css('height', height);
+            $(".text > article").css('height', height);
             var total_width = $(".content").width();
             var margin = total_width * 0.0083;
             $("article").css('margin-top', margin);
