edited homepage css

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -141,10 +141,10 @@ article.project img {
 }
 
 div.main section.text article {
-    width:96.66%;
+    width:95.00%;
     margin: 0 1.67%;
     background-color: #7eac32;
-    padding: 10px;
+    padding: 1.66%;
     color:#fff;
     font-size:0.857em;
 }
