edited homepage css

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -144,7 +144,7 @@ div.main section.text article {
     width:93.33%;
     margin: 0 1.67%;
     background-color: #7eac32;
-    padding: 1.67%;
+    padding: 0 1.67%;
     color:#fff;
     font-size:0.857em;
 }
