--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -66,8 +66,8 @@
     
     {% block footer %}
     <footer>
-        <p>&copy; {{ now }} Future Green Studio</p>
-        <p>92 3rd Street Brooklyn, NY | 718-855-8995 | info@futuregreenstudio.com</p>
+        <span class="copyright">&copy; {{ now }} Future Green Studio</span>
+        <span class="contact">92 3rd Street Brooklyn, NY | 718-855-8995 | info@futuregreenstudio.com</span>
     </footer>
     {% endblock footer %}
 
