--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -150,7 +150,7 @@ article.project img {
 div.main section.text article {
     width:93.33333%;
     margin: 0 1.66667%;
-    background-color: #7eac32;
+    background:#7eac32 url('images/profile_bg.png') no-repeat left top;
     padding: 0 1.66667%;
     color:#fff;
     font-size:0.857em;
