--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -16,7 +16,7 @@
         <section class="text" id="profile">
             <article>
             {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
-            <p><a href="#">Read More</a></p>
+            <a href="#" class="tease">Read More</a>
             </article>
         </section>
         <section class="projects">
