--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -153,7 +153,7 @@ div.main section.text article {
     background:#7eac32 url('images/profile_bg.png') no-repeat left top;
     padding: 0 1.66667%;
     color:#fff;
-    /*font-size:0.857em;*/
+    line-height:1.3em;
 }
 
 div.main section.text h1 {
