edited homepage css

--- a/futuregreen/templates/content/contentblock/excerpt.html
+++ b/futuregreen/templates/content/contentblock/excerpt.html
@@ -4,7 +4,7 @@
 </header>
 {% endif %}
 {% if object.excerpt_html %}
-{{ object.excerpt_html|safe }}
+{{ object.excerpt }}
 {% endif %}
 {% if object.image %}
 <img src="{{ object.image.url }}" />
