edited homepage css

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -69,7 +69,7 @@
     <script type="text/javascript">
         function Flex() {
             var height = $(".project").width();
-            $(".text > article").css('height', height);
+            $(".text > article").css('min-height', height);
             var total_width = $(".content").width();
             var margin = total_width * 0.0083;
             $("article").css('margin-top', margin);
