edited homepage css

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -154,15 +154,13 @@ div.main section.text article {
     padding: 0 1.66667%;
     color:#fff;
     line-height:1.4em;
-}
-
-div.main section.text header {
-
+    text-align: justify;
 }
 
 div.main section.text h1 {
     font-weight:bold;
     line-height:2em;
+    text-align: left;
 }
 
 div.main section.text .tease {
