edited homepage css

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -151,7 +151,7 @@ div.main section.text article {
     width:93.33333%;
     margin: 0 1.66667%;
     background:#7eac32 url('images/profile_bg.png') no-repeat left top;
-    padding: 0 1.66667% 10px 0;
+    padding: 0 1.66667% 10px 1.66667%;
     color:#fff;
     line-height:1.4em;
     text-align: justify;
