edited homepage css

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -49,6 +49,7 @@ table {
 
 
 body {
+        min-width:1024px;
         padding:0;
         position:relative;
         font: normal 87.5% "Segoe UI", "Lucida Sans", Arial, Helvetica, sans-serif;
