edited homepage css

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -332,7 +332,7 @@ div.main section.featured article.project {
         margin: 0 5%;
     }
 
-    div.main section.text article {
+    section.text article {
         font-size:0.92857em;
     }
 }
@@ -353,4 +353,10 @@ div.main section.featured article.project {
     width:85%;
     margin: 0 7.5%;
   }
+}
+
+@media screen and (max-width: 1024px) {
+    section.text article {
+        font-size:0.92857em;
+    }
 }
