--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -100,12 +100,23 @@ body {
     }
 
     body > footer {
-        width: 98.33334%;
         clear:both;
-        margin: 0 .80333%;
         color:#999;
         text-transform: uppercase;
         font-size:.85em;
+    }
+
+    body > footer > .copyright {
+        float:left;
+        width:15%;
+        margin: 0 .83333%;
+    }
+
+    body > footer > .contact {
+        float:left;
+        width:81.66668%;
+        margin: 0 .83333%;
+        text-align:right;
     }
 
 /********** HOMEPAGE ***********/
