edited homepage css

--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -72,7 +72,7 @@
     {% block footer %}
     <footer>
         <span class="copyright">&copy; {{ now }} Future Green Studio</span>
-        <span class="contact">92 3rd Street Brooklyn, NY | 718-855-8995 | info@futuregreenstudio.com</span>
+        <span class="contact">92 3rd Street Brooklyn, NY  |  718.855.8995  |  <a href=="mailto:info@futuregreenstudio.com">info@futuregreenstudio.com</a></span>
     </footer>
     {% endblock footer %}
 
