edited homepage css

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -71,7 +71,7 @@
             var height = $(".project").width();
             $(".text > article").css('min-height', height);
             var total_width = $(".content").width();
-            var margin = total_width * 0.0083;
+            var margin = total_width * 0.0083333;
             $("article").css('margin-top', margin);
             $("article").css('margin-bottom', margin);
         }
