edited homepage css

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -134,11 +134,11 @@ div.main {
 }
 
 div.secondary {
-     width:33.33333%;
+     width:33.3333333%;
 }
 
 div.tertiary {
-     width:16.66667%;
+     width:16.6666667%;
 }
 
 div.secondary section.projects article.project {
