--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -124,11 +124,11 @@
     }
 
     $(document).ready(function() {
-        Flex();
+        //Flex();
     });
 
     $(window).resize(function() {
-        Flex();
+        //Flex();
     });
 
     $("#open").click(function () {
