--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -1,19 +1,17 @@
 {% extends "portfolio/portfolio_base.html" %}
-
-
-
-    {% block content_header %}
-    <header>
-    {% block content_title %}
-        <h1>All Projects</h1>
-    {% endblock content_title %}
-    </header>
-    {% endblock content_header %}
-    {% block main %}
-        <section class="project-list">
-        {% for project in project_list %}
-            {% include "portfolio/project_snippet.html" %}
-        {% endfor %}
-        </section>
-    {% endblock main %}
-
+{% block content %}
+{% block content_header %}
+<header>
+{% block content_title %}
+    <h1>All Projects</h1>
+{% endblock content_title %}
+</header>
+{% endblock content_header %}
+{% block main %}
+    <section class="project-list">
+    {% for project in project_list %}
+        {% include "portfolio/project_snippet.html" %}
+    {% endfor %}
+    </section>
+{% endblock main %}
+{% endblock content %}
