--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -59,7 +59,7 @@
         </section>
         <section class="text" id="news">
             <article>
-                <h1 class="date">{{ item.date_published|date:"M d Y" }}</h1>
+                <h1 class="date">{{ item.date_published|date:"M d, Y" }}</h1>
                 <h2>{{ item.title }}</h2>
                 {{ item.excerpt|truncatewords:20 }}
                 <a href="#" class="tease">Read More</a>
