--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -176,6 +176,12 @@ div.secondary section.text article .date {
     color:rgba(255,255,255,0.5);
 }
 
+div.secondary section.text article h2 {
+    clear:both;
+    font-weight:bold;
+    font-size:1.2857em;
+}
+
 div.tertiary article.project {
     float:left;
     width:90%;
