--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -85,11 +85,13 @@ body {
 
     body > header > h1 {
         margin:0;
-        padding:0;
+        padding:80px 0 0 0;
         float:left;
-        height:80px;
-        width:280px;
-        line-height:100px;
+        height:0;
+        width:380px;
+        overflow: hidden;
+        font-size:8px;
+        background: url('images/logo.png' no-repeat left top)
     }
 
     body > header > nav {
