--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -97,7 +97,7 @@ body {
     body > header > nav {
         float:right;
         width:480px;
-        height:100px;
+        line-height:80px;
     }
 
     body > header > nav li {
