--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -7,6 +7,8 @@
             <nav>
                 <a href="#open" id="open">Open</a>
                 <a href="#close" id="close">Close</a>
+                <a href="#next" id="next">Next</a>
+                <a href="#prev" id="prev">Prev</a>
             </nav>
             <ul>
             {% for image in project.projectimage_set.all %}
@@ -96,6 +98,13 @@
 {% endblock content %}
 
 {% block js_local %}
+<script type="text/javascript" src="{{ STATIC_URL }}js/jcarousellite_1.0.1.min.js"></script>
+<script type="text/javascript">
+    $(".slideshow").jCarouselLite({
+        btnNext: ".default .next",
+        btnPrev: ".default .prev"
+    });
+</script>
 <script type="text/javascript">
     function Flex() {
             if ($(".shim").length == 0) {
