--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -157,9 +157,9 @@
 </script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/jcarousellite_1.0.1.min.js"></script>
 <script type="text/javascript">
-    //$(".slideshow").jCarouselLite({
-        //btnNext: ".slideshow .next",
-        //btnPrev: ".slideshow .prev"
-    //});
+    $(".slideshow").jCarouselLite({
+        btnNext: ".slideshow .next",
+        btnPrev: ".slideshow .prev"
+    });
 </script>
 {% endblock js_local %}
